<resources>
    <string name="app_name">Clínica Cepheus</string>
    <string name="user_name">jcvalver.devpta@gmail.com</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_support">Soporte</string>
    <string name="nav_session">Sesion</string>

    <string name="login_toolbar_cepheus">Mundo Cepheus</string>
    <string name="login_toolbar_map">Mi Mapa</string>
    <string name="login_toolbar_benefits">Beneficios</string>
    <string name="login_toolbar_help">Ayuda</string>
    <string name="login_toolbar_setting">Configuración</string>
    <string name="login_toolbar_close_session">Cerrar Sesión</string>

    <!-- tabs citas medicas-->
    <string name="reserve_citas_medicas_tab">Mis Citas Médicas</string>
    <string name="search_doctor_tab">Mis Médicos</string>
    <string name="results_tab">Mis Resultados</string>
    <string name="perfil_tab">Mi Perfil</string>


    <!-- reserve citas medicas-->
    <string name="reserve_citas_title">Citas Médicas</string>
    <string name="reserve_citass_subtitle">Reserva Tu Cita Médica</string>

    <!-- dimens Login-->
    <string name="login_title">CLÍNICA CEPHEUS</string>
    <string name="login_subtitle">La salud es primero</string>
    <string name="login_username">DNI</string>
    <string name="login_password">Clave</string>
    <string name="login_button">Ingresar</string>
    <string name="login_register">¿No tienes una Cuenta? Regístrate</string>

    <!-- dimens Register-->
    <string name="register_title">CLÍNICA CEPHEUS</string>
    <string name="register_subtitle">La salud es primero</string>
    <string name="register_full_name">Nombre Completo</string>
    <string name="register_email">Email</string>
    <string name="register_username">DNI</string>
    <string name="register_password">Clave</string>
    <string name="register_button">Registrar</string>
    <string name="register_login">¿Ya tienes una cuenta? Ingresa</string>
    <string name="register_toolbar_cepheus">Agregar PIN</string>

    <!-- dimens Reserve-->
    <string name="reservecita_paciente">Paciente</string>
    <string name="reservecita_fecha">Fecha</string>


    <string name="exception_message">deberia implementar FragmentInteractionListener</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="citas_principal">Reserva tu cita Médica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
